monticore-generator/src/test/resources/cocos/invalid/A4057/A4057a.mc4
package cocos.invalid.A4057;

grammar A4057a {

  symbol A = "Hello";
}